objects/vlocity_ins__VlocityStateModelVersion__c.object
<CustomObject>
    <description>A version of a Vlocity State Model. Each version of the state model can define changes in the allowed state transitions. Master-detail child object of Vlocity State Model.</description>
    <fields>
        <fullName>vlocity_ins__AdditionalObjects__c</fullName>
        <description>long text field to store additional objects which user can use to write conditions and the relationship field to StateModel__c.ObjectAPIName__c.  This is used to pull data from parent to all applicable child objects.</description>
        <label>Additional Objects</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CreationVlocityActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Creation Action</label>
        <referenceTo>vlocity_ins__VlocityAction__c</referenceTo>
        <relationshipLabel>Vlocity State Model Versions</relationshipLabel>
        <relationshipName>StateModelVersionActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CurrentStatus__c</fullName>
        <formula>IF( AND(vlocity_ins__StartDateTime__c &lt;=  NOW(), vlocity_ins__IsEnabled__c,  OR(vlocity_ins__EndDateTime__c &gt;  NOW(),  ISNULL(vlocity_ins__EndDateTime__c))) , &quot;Active&quot;,  IF( AND( NOT(ISNULL(vlocity_ins__EndDateTime__c) ), vlocity_ins__EndDateTime__c &lt;=  NOW(), vlocity_ins__IsEnabled__c), &quot;Expired&quot;,  IF(  AND(vlocity_ins__EndDateTime__c &gt;  NOW(), vlocity_ins__IsEnabled__c) , &quot;Pending&quot;, &quot;Inactive&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDateTime__c</fullName>
        <label>End Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleEvaluationClassName__c</fullName>
        <label>Rule Evaluation Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleEvaluationMethodName__c</fullName>
        <label>Rule Evaluation Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelId__c</fullName>
        <label>Vlocity State Model</label>
        <referenceTo>vlocity_ins__VlocityStateModel__c</referenceTo>
        <relationshipLabel>Vlocity State Model Version</relationshipLabel>
        <relationshipName>Vlocity_State_Model_Version</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VersionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity State Model Version</label>
    <nameField>
        <label>Vlocity State Model Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Model Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>